compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__imported_type_cursor_after_dot.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import dep\n\npub fn wibble(\n  _: dep.Zoo,\n) -> Nil {\n  Nil\n}\n"
---
import dep

pub fn wibble(
  _: dep.Zoo,
) -> Nil {
  Nil
}


----- Completion content -----
[
    CompletionItem {
        label: "BitArray",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "Bool",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "Float",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "Int",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "List",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "Nil",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "Result",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "String",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "UtfCodepoint",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "dep.Zoo",
        label_details: None,
        kind: Some(
            Class,
        ),
        detail: Some(
            "Type",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 3,
                            character: 5,
                        },
                        end: Position {
                            line: 3,
                            character: 12,
                        },
                    },
                    new_text: "dep.Zoo",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
