compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__in_custom_type_definition.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 466
expression: import dep
---
|import dep


----- Completion content -----
