compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__internal_modules_from_same_package_are_included.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "import gleam\n\npub fn main() {\n  0\n}"
---
import gleam

pub fn main() {
  0
}

----- Completion content -----
[
    CompletionItem {
        label: "app/internal",
        label_details: None,
        kind: Some(
            Module,
        ),
        detail: None,
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 7,
                        },
                        end: Position {
                            line: 0,
                            character: 12,
                        },
                    },
                    new_text: "app/internal",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
